fixed so iframe starts out empty on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,7 +2,6 @@
 //                            General Styles
 // ********************************************************************
 
-
 $paddingSmall:2em;
 $paddingBig:10%;
 $backgroundColor:ivory;
@@ -38,10 +37,6 @@ img {
 
 .showing {
     display: block;
-}
-
-.hidden {
-    display: none;
 }
 
 // ********************************************************************
